--- a/component_module1/src/main/res/values/strings.xml
+++ b/component_module1/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Component Module1</string>
+    <string name="m1_app_name">Component Module1</string>
 </resources>
