--- a/component_module2/src/main/res/values/strings.xml
+++ b/component_module2/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Component Module2</string>
+    <string name="m2_app_name">Component Module2</string>
 </resources>
